--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
     <div class="flex h-full">
         <div class="w-3/5 flex items-center justify-center text-white p-8">
             <div class="text-blok">
-                <h2 class="text-4xl font-bold">2. Мягкость и недостаток честности GPT</h2>
+                <h2 class="text-4xl font-bold">2. Мягкость и недостаток честности</h2>
                 <p class="mt-4 text-2xl">GPT запрограммирован быть вежливым и мягким с собеседником, что иногда приводит к излишней осторожности в ответах. Это может затруднить получение конструктивной критики или безжалостно честного мнения.</p>
                 <p class="mt-4 text-2xl">Рекомендации:</p>
                 <ul class="mt-4 list-disc pl-8">
