--- a/index.html
+++ b/index.html
@@ -1304,8 +1304,8 @@
                     <li>Нажимайте на запросы, получая уточненные списки, повторяя процесс на 4-5 уровнях.</li>
                     <li>Попросите GPT проанализировать эти запросы для понимания страхов и потребностей аудитории.</li>
                     <li>Используйте полученные данные для формирования контента.</li>
+                    <li>Как бонус, спросите GPT, какие ситуации или этапы переживает клиент. Например, если клиента покупает подгузники, то до этого он искал услуги врача. Эта информация поможет вам расширить вашу аудиторию.</li>
                 </ul>
-                <p class="mt-4 text-2xl">Как бонус, спросите GPT, какие ситуации или этапы переживает клиент.</p>
             </div>
         </div>
         <div class="black-area flex items-center justify-center">
