--- a/index.html
+++ b/index.html
@@ -530,12 +530,12 @@
                 <h1 class="text-5xl font-bold">Основные принципы и методы работы с GPT</h1>
                 <p class="mt-4 text-2xl">
                     Чтобы получить от GPT максимально полезный и точный ответ, важно понимать, как правильно строить диалог и ставить задачи. Вот несколько ключевых подходов:
-                    <ul class="list-disc ml-6 mt-4">
+                    <!-- <ul class="list-disc ml-6 mt-4">
                         <li><strong>Четкость и конкретность:</strong> Формулируйте запросы так, чтобы они были ясными и понятными.</li>
                         <li><strong>Контекст:</strong> Предоставляйте достаточный контекст, чтобы GPT мог лучше понять вашу задачу.</li>
                         <li><strong>Итеративный подход:</strong> Используйте итерации, задавая уточняющие вопросы на основе полученных ответов.</li>
                         <li><strong>Структурированность:</strong> Структурируйте ваши запросы, чтобы GPT мог предоставить более организованный и точный ответ.</li>
-                    </ul>
+                    </ul> -->
                 </p>
             </div>
         </div>
