--- a/index.html
+++ b/index.html
@@ -936,9 +936,11 @@
     <div class="flex h-full">
         <div class="w-3/5 flex items-center justify-center text-white p-8">
             <div class="text-blok">
-                <h1 class="text-4xl font-bold">14. Использование нестандартных форматов текста (PPTX, HTML, SBO и другие)</h1>
+                <h1 class="text-4xl font-bold">14. Использование нестандартных форматов текста</h1>
                 <p class="mt-4 text-2xl">
-                    Применение различных форматов текста, таких как презентации (PPTX), веб-страницы (HTML) или специализированные файлы (SBO), позволяет представить информацию в удобном для конкретных задач формате. Это особенно полезно для визуализации данных, создания отчетов или представления материалов в структурированной и наглядной форме, а также для взаимодействия с различными системами. 
+                    Применение различных форматов текста, таких как HTML, позволяет представить информацию в удобном для конкретных задач формате. В зависимости от вашей специализации вы можете использовать различные форматы текста для представления как визуальных данных, так и 3D-обьектов или карты действий и так далее. Это особенно полезно для визуализации данных, создания отчетов или представления материалов в структурированной и наглядной форме, а также для взаимодействия с различными системами.
+
+Например, если вам нужно подготовить презентацию по проекту, вы можете попросить модель сформировать HTML-страницу с интерактивными элементами.
                     <br><br>
                     <blockquote class="bg-gray-800 p-4 mt-4 rounded">
                         Например, если вам нужно подготовить презентацию по проекту, вы можете попросить модель создать файл в формате PPTX с развернутыми слайдами или сформировать HTML-страницу с интерактивными элементами.
@@ -1182,9 +1184,8 @@
                 <ul class="mt-4 list-disc pl-8">
                     <li>Дайте GPT роль: Укажите конкретную роль, которую модель должна играть, например: <strong>«Представь, что ты опытный критик или жесткий бизнес-консультант».</strong></li>
                     <li>Запросите честность: Напоминайте GPT, что вам нужна безжалостная честность, например: <strong>«Пожалуйста, будь безжалостно честным и указывай на все недостатки, которые ты видишь».</strong></li>
-                    <li>Ищите противоречия: Попросите GPT находить противоречия в ваших вопросах.</li>
+                    <li>Ищите противоречия: Попросите GPT находить противоречия в ваших вопросах и утверждениях на уровне выше по пирамиде Роберта Дилтса. Это может помочь выявить более глубокие проблемы или их истинные причины.</li>
                 </ul>
-                <p class="mt-4 text-2xl">Следуя этим рекомендациям, вы сможете получить от GPT более откровенные и конструктивные ответы.</p>
             </div>
         </div>
         <div class="black-area flex items-center justify-center">
@@ -1330,6 +1331,7 @@
                     <li>Кратко опишите каждую идею в 4-5 предложениях.</li>
                     <li>Внесите идеи в столбик таблицы, а в строку добавьте потребности и запросы клиентов.</li>
                     <li>Попросите GPT создать статью или пост, используя ваши комментарии для раскрытия запроса.</li>
+                    <li>Для разнообразия контента двигайтесь по таблице по диагонали.</li>
                     <li>Добавьте актуальные новости как дополнительный элемент контент-плана.</li>
                 </ul>
             </div>
