--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
             </div>
         </div>
         <div class="black-area flex items-center justify-center">
-            <img src="dialogue modeling for customer negotiation scenario on a dark background.jpeg" alt="Слайд 38" class="object-cover w-full h-full">
+            <img src="dialogue modeling for customer negotiation scenario on a dark background (1).jpeg" alt="Слайд 38" class="object-cover w-full h-full">
         </div>
     </div>
 </section>
