--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
     <div class="flex h-full">
         <div class="w-3/5 flex items-center justify-center text-white p-8">
             <div class="text-blok">
-                <h1 class="text-5xl font-bold">Ограничения GPT</h1>
+                <!-- <h1 class="text-5xl font-bold">Ограничения GPT</h1> -->
                 <ul class="list-disc list-inside mt-4">
                     <li><strong>Отсутствие оригинальности и креативности:</strong> Хотя GPT способен генерировать тексты, он делает это на основе уже существующих данных. Это означает, что его предложения не являются абсолютно оригинальными и могут повторять шаблоны или идеи, которые уже существуют в базе его знаний.</li>
                     <li><strong>Ошибки в сложных логических выводах:</strong> Несмотря на свою способность анализировать информацию, GPT может ошибаться при решении сложных логических задач, особенно если они требуют абстрактного мышления или дедукции.</li>
