--- a/index.html
+++ b/index.html
@@ -938,12 +938,12 @@
             <div class="text-blok">
                 <h1 class="text-4xl font-bold">14. Использование нестандартных форматов текста</h1>
                 <p class="mt-4 text-2xl">
-                    Применение различных форматов текста, таких как HTML, позволяет представить информацию в удобном для конкретных задач формате. В зависимости от вашей специализации вы можете использовать различные форматы текста для представления как визуальных данных, так и 3D-обьектов или карты действий и так далее. Это особенно полезно для визуализации данных, создания отчетов или представления материалов в структурированной и наглядной форме, а также для взаимодействия с различными системами.
+                    Применение различных форматов текста, таких как HTML, позволяет представить информацию в удобном для конкретных задач формате. В зависимости от вашей специализации вы можете использовать различные форматы текста для представления как визуальных данных, так и 3D-объектов или карты действий и так далее. Это особенно полезно для презентации данных, создания отчетов или представления материалов в структурированной и наглядной форме, а также для взаимодействия с различными системами.
 
 Например, если вам нужно подготовить презентацию по проекту, вы можете попросить модель сформировать HTML-страницу с интерактивными элементами.
                     <br><br>
                     <blockquote class="bg-gray-800 p-4 mt-4 rounded">
-                        Например, если вам нужно подготовить презентацию по проекту, вы можете попросить модель создать файл в формате PPTX с развернутыми слайдами или сформировать HTML-страницу с интерактивными элементами.
+                        Например, если вам нужно подготовить презентацию по проекту, вы можете попросить модель сформировать HTML-страницу с интерактивными элементами.
                     </blockquote>
                 </p>
             </div>
