--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,7 @@
         <div class="w-3/5 flex items-center justify-center text-white p-8">
             <div class="text-blok">
                 <h1 class="text-6xl font-bold">Приглашение</h1>
-                <p class="mt-4 text-2xl">Всё, что мы обсудили ранее, — это лишь верхушка айсберга возможностей, которые открывают нейросети. Мы, команда специалистов <strong class="text-blue-300">AI-M.io</strong>, занимаемся автоматизацией бизнеса и разработали собственную IT-систему, использующую взаимодействия различных нейросетей.</p>
+                <p class="mt-4 text-2xl">Всё, что мы обсудили ранее, — это лишь верхушка айсберга возможностей, которые открывают нейросети. Мы, команда специалистов <a href="https://ai-m.io"><strong class="text-blue-300">AI-M.io</strong></a>, занимаемся автоматизацией бизнеса и разработали собственную IT-систему, использующую взаимодействия различных нейросетей.</p>
                 <p class="mt-4 text-2xl">Чтобы реализовать комплексные решения и максимально использовать возможности умных систем, обращайтесь к нам, и мы с радостью предложим вам индивидуальные решения для вашего успеха в мире технологий!</p>
                 <br>
                 <p class="mt-4 text-2xl"><strong>Запомните промокод <span class="text-blue-300">[[MPROMO]]</span> для получения 5% скидки на первый месяц.</strong></p>
