--- a/index.html
+++ b/index.html
@@ -96,6 +96,30 @@
         });
 
         goToSlide(-1);
+
+
+        let startX = 0;
+        let startY = 0;
+        // Функция для обработки начала касания
+        card.addEventListener('touchstart', (e) => {
+            startX = e.touches[0].clientX;
+            startY = e.touches[0].clientY;
+        });
+        // Функция для обработки окончания касания
+        card.addEventListener('touchend', (e) => {
+            const endX = e.changedTouches[0].clientX;
+            const endY = e.changedTouches[0].clientY;
+
+            // Вычисляем разницу координат
+            const diffX = endX - startX;
+            const diffY = endY - startY;
+
+            // Проверяем, что свайп был горизонтальным (по оси X)
+            if (Math.abs(diffX) > Math.abs(diffY)) {
+                if (diffY > 50) goToSlide(currentSlide+1);
+                if (diffY < -50) goToSlide(currentSlide-1);
+            }
+        });
     </script>
 </head>
 <body>
