--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             const diffX = endX - startX;
             const diffY = endY - startY;
 
-            // Проверяем, что свайп был горизонтальным (по оси X)
-            if (Math.abs(diffX) > Math.abs(diffY)) {
+            // Проверяем, что свайп был по оси Y
+            if (Math.abs(diffY) > Math.abs(diffX)) {
                 if (diffY > 50) goToSlide(currentSlide+1);
                 if (diffY < -50) goToSlide(currentSlide-1);
             }
